Refine PyLucene GPU end-to-end tests
Signed-off-by: Zack Meeks <zmeeks@nvidia.com>